--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   <section class="hero">
     <div class="hero-content">
       <h2>Saveurs authentiques de lInde ????</h2>
-      <p>Decouvrez nos plats epices prepares avec passion et tradition.</p>
+      <p>Decouvrez nos plats epices prepares avec passion et tradition</p>
       <a href="#menu" class="btn">Voir le menu</a>
     </div>
   </section>
@@ -214,7 +214,7 @@
     <h2>A propos de nous</h2>
     <p>
       Bienvenue au <strong>Safwanis</strong> un restaurant indien qui vous invite a un voyage culinaire unique  
-      Nous selectionnons des ingredients frais et des epices venues directement dInde pour offrir une experience riche en gouts et en couleurs.
+      Nous selectionnons des ingredients frais et des epices venues directement dInde pour offrir une experience riche en gouts et en couleurs
     </p>
   </section>
 
@@ -222,19 +222,29 @@
     <h2>Notre Menu</h2>
     <div class="menu-items">
       <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1627308595229-7830a5c91f9f" alt="Poulet Tikka Masala">
+        <img src="https://images.unsplash.com/photo-1604908177525-3c289dd0240a" alt="Poulet Tikka Masala">
         <h3>Poulet Tikka Masala</h3>
-        <p>Poulet marine et mijote dans une sauce cremeuse et epicee.</p>
+        <p>Poulet marine et mijote dans une sauce cremeuse et epicee</p>
       </div>
       <div class="menu-item">
         <img src="https://images.unsplash.com/photo-1626203274557-44b5b0541c5d" alt="Biryani">
         <h3>Biryani Royal</h3>
-        <p>Riz basmati parfume aux epices servi avec agneau ou legumes.</p>
+        <p>Riz basmati parfume aux epices servi avec agneau ou legumes</p>
       </div>
       <div class="menu-item">
-        <img src="https://images.unsplash.com/photo-1603030931309-01a48f9d70a5" alt="Naan au fromage">
+        <img src="https://images.unsplash.com/photo-1621609760237-cf23c6dc2c2d" alt="Naan au fromage">
         <h3>Naan au Fromage</h3>
-        <p>Pain traditionnel indien moelleux et garni de fromage fondant.</p>
+        <p>Pain traditionnel indien moelleux et garni de fromage fondant</p>
+      </div>
+      <div class="menu-item">
+        <img src="https://images.unsplash.com/photo-1604908176939-8a7c0c2e67d2" alt="Poulet Curry">
+        <h3>Poulet Curry</h3>
+        <p>Poulet tendre dans une sauce curry onctueuse et epicee</p>
+      </div>
+      <div class="menu-item">
+        <img src="https://images.unsplash.com/photo-1604908177751-b5d7c6f528d6" alt="Samosa">
+        <h3>Samosa</h3>
+        <p>Beignets farcis aux legumes epices croustillants</p>
       </div>
     </div>
   </section>
@@ -248,7 +258,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Le Safwanis — Tous droits reserves.
+    &copy; 2025 Le Safwanis — Tous droits reserves
   </footer>
 
 </body>
