--- a/index.html
+++ b/index.html
@@ -26,20 +26,6 @@
             text-shadow: 3px 3px 5px #000;
         }
 
-        .dragon {
-            position: absolute;
-            top: -10px;
-            left: 10px;
-            width: 120px;
-            opacity: 0.7;
-        }
-
-        .dragon-right {
-            right: 10px;
-            left: auto;
-            transform: scaleX(-1);
-        }
-
         nav {
             background-color: #000;
             padding: 15px;
@@ -67,97 +53,44 @@
             box-shadow: 0 0 10px #ff0000;
         }
 
-        .hero {
-            background-image: url("https://images.unsplash.com/photo-1604908177225-e1e04f02c5a8");
-            background-size: cover;
-            background-position: center;
-            height: 350px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .hero h2 {
-            background: rgba(0, 0, 0, 0.6);
-            padding: 20px 40px;
-            border: 2px solid #ff0000;
-            border-radius: 10px;
-            font-size: 2.5rem;
-        }
-
-        .section {
-            padding: 40px;
-            text-align: center;
-        }
-
-        .chef-photo {
-            width: 300px;
-            border-radius: 10px;
-            border: 3px solid #ff0000;
-            box-shadow: 0 0 15px #ff0000;
-            margin-top: 20px;
-        }
-
-        .menu-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 25px;
-            margin-top: 30px;
-        }
-
-        .menu-item {
-            background-color: #1a1a1a;
-            padding: 20px;
-            border: 2px solid #ff0000;
-            border-radius: 10px;
-            box-shadow: 0 0 10px #ff0000;
-        }
-
-        footer {
-            background-color: #000;
-            padding: 20px;
-            text-align: center;
-            color: #777;
-            margin-top: 40px;
-        }
-
-        /* === MINI-JEUX RAMEN === */
-        #ramenGame {
+        /* === MINI-JEU ACCUEIL === */
+        #clickGame {
             position: fixed;
             top: 0;
             left: 0;
             width: 100vw;
             height: 100vh;
-            background: rgba(0,0,0,0.88);
+            background: rgba(0,0,0,0.9);
             display: none;
-            overflow: hidden;
-            z-index: 9999;
+            z-index: 99999;
             text-align: center;
+            padding-top: 60px;
         }
 
-        #closeGame {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            background: #ff0000;
-            border: none;
-            color: white;
-            padding: 10px 15px;
+        #ramenClick {
+            width: 160px;
             cursor: pointer;
-            font-size: 1.2rem;
-            border-radius: 5px;
+            margin-top: 60px;
         }
 
-        #score {
-            font-size: 2rem;
+        #lostScreen {
+            display: none;
+            margin-top: 40px;
+        }
+
+        .lostButton {
+            background: #ff0000;
+            padding: 15px 25px;
+            border: none;
+            border-radius: 8px;
+            color: white;
+            cursor: pointer;
+            font-size: 1.3rem;
             margin-top: 20px;
         }
 
-        .ramen {
-            position: absolute;
-            width: 70px;
-            cursor: pointer;
-            user-select: none;
+        #gameInfo {
+            font-size: 1.8rem;
         }
     </style>
 </head>
@@ -165,50 +98,26 @@
 <body>
 
 <header>
-    <img src="https://pngimg.com/uploads/dragon/dragon_PNG17.png" class="dragon">
-    <img src="https://pngimg.com/uploads/dragon/dragon_PNG17.png" class="dragon dragon-right">
     <h1>Le Kevinien</h1>
 </header>
 
 <nav>
-    <a href="#accueil">Accueil</a>
+    <a id="accueilBtn">Accueil</a>
     <a href="#menu">Menu</a>
-    <a id="contactBtn">Contact</a>
+    <a href="#contact">Contact</a>
 </nav>
 
-<section class="hero" id="accueil">
-    <h2>Bienvenue au restaurant chinois Le Kevinien</h2>
-</section>
+<!-- === MINI-JEU : CLIQUE RAPIDE === -->
+<div id="clickGame">
+    <h2>CLIQUE LE PLUS VITE POSSIBLE ! 🍜</h2>
+    <div id="gameInfo">Clics demandés : 1 / seconde</div>
 
-<section class="section">
-    <h2>Notre Chef</h2>
-    <p>Voici notre chef cuisinier, spécialiste des ramens et plats asiatiques.</p>
-    <img class="chef-photo" src="https://images.unsplash.com/photo-1551218808-94e220e084d2" alt="Chef asiatique">
-</section>
+    <img id="ramenClick" src="https://png.pngtree.com/png-clipart/20230927/original/pngtree-ramen-noodles-instant-food-png-image_13152582.png">
 
-<section class="section" id="menu">
-    <h2>Notre Carte</h2>
-    <p>Découvrez nos spécialités 🍜🐉</p>
-
-    <div class="menu-grid">
-        <div class="menu-item"><h3>Ramen Classique</h3><p>10,90 €</p></div>
-        <div class="menu-item"><h3>Ramen Poulet</h3><p>12,50 €</p></div>
-        <div class="menu-item"><h3>Ramen Épicé du Dragon</h3><p>13,90 €</p></div>
-        <div class="menu-item"><h3>Nouilles Sautées</h3><p>11,50 €</p></div>
-        <div class="menu-item"><h3>Boeuf Szechuan</h3><p>14,90 €</p></div>
-        <div class="menu-item"><h3>Riz Cantonais</h3><p>9,50 €</p></div>
-        <div class="menu-item"><h3>Poulet Général Tao</h3><p>13,50 €</p></div>
-        <div class="menu-item"><h3>Crevettes Impériales</h3><p>15,90 €</p></div>
-        <div class="menu-item"><h3>Soupe Miso</h3><p>6,50 €</p></div>
-        <div class="menu-item"><h3>Gyozas Maison</h3><p>8,90 €</p></div>
+    <div id="lostScreen">
+        <h1>😵 Perdu !</h1>
+        <button class="lostButton" id="retryBtn">Recommencer</button>
     </div>
-</section>
-
-<!-- === MINI-JEU RAMENS === -->
-<div id="ramenGame">
-    <button id="closeGame">Fermer</button>
-    <h2>Attrape les Ramens ! 🍜</h2>
-    <div id="score">Score : 0</div>
 </div>
 
 <footer>
@@ -216,67 +125,62 @@
 </footer>
 
 <script>
-    const contactBtn = document.getElementById("contactBtn");
-    const ramenGame = document.getElementById("ramenGame");
-    const closeGame = document.getElementById("closeGame");
-    const scoreDisplay = document.getElementById("score");
 
-    let score = 0;
-    let spawnInterval = null;
-    let baseSpeed = 3;  // vitesse de départ
+    const accueilBtn = document.getElementById("accueilBtn");
+    const clickGame = document.getElementById("clickGame");
+    const ramenClick = document.getElementById("ramenClick");
+    const lostScreen = document.getElementById("lostScreen");
+    const retryBtn = document.getElementById("retryBtn");
+    const info = document.getElementById("gameInfo");
 
-    contactBtn.addEventListener("click", () => {
-        ramenGame.style.display = "block";
-        startGame();
-    });
+    let clicks = 0;
+    let clicksRequired = 1;
+    let gameInterval = null;
 
-    closeGame.addEventListener("click", () => {
-        stopGame();
-    });
+    accueilBtn.addEventListener("click", startClickGame);
 
-    function startGame() {
-        score = 0;
-        scoreDisplay.textContent = "Score : " + score;
+    function startClickGame() {
+        clickGame.style.display = "block";
+        resetGame();
 
-        spawnInterval = setInterval(() => {
-            createRamen();
-        }, 900);
-    }
+        // chaque seconde : on vérifie si le joueur clique assez vite
+        gameInterval = setInterval(() => {
 
-    function stopGame() {
-        ramenGame.style.display = "none";
-        clearInterval(spawnInterval);
-        document.querySelectorAll(".ramen").forEach(r => r.remove());
-    }
-
-    function createRamen() {
-        const ramen = document.createElement("img");
-        ramen.src = "https://png.pngtree.com/png-clipart/20230927/original/pngtree-ramen-noodles-instant-food-png-image_13152582.png";
-        ramen.classList.add("ramen");
-
-        ramen.style.left = Math.random() * (window.innerWidth - 80) + "px";
-        ramen.style.top = "-80px";
-
-        ramenGame.appendChild(ramen);
-
-        ramen.addEventListener("click", () => {
-            score++;
-            scoreDisplay.textContent = "Score : " + score;
-            ramen.remove();
-        });
-
-        // 🎯 Vitesse augmente avec le score
-        let fallSpeed = baseSpeed + score * 0.5;
-
-        let fall = setInterval(() => {
-            ramen.style.top = (parseInt(ramen.style.top) + fallSpeed) + "px";
-
-            if (parseInt(ramen.style.top) > window.innerHeight) {
-                ramen.remove();
-                clearInterval(fall);
+            if (clicks < clicksRequired) {
+                lose();
+                return;
             }
-        }, 20);
+
+            clicks = 0;
+            clicksRequired *= 2;    // difficulté x2 chaque seconde
+
+            info.textContent = "Clics demandés : " + clicksRequired + " / seconde";
+
+        }, 1000);
     }
+
+    function resetGame() {
+        clicks = 0;
+        clicksRequired = 1;
+        lostScreen.style.display = "none";
+        info.textContent = "Clics demandés : 1 / seconde";
+
+        if (gameInterval) clearInterval(gameInterval);
+    }
+
+    function lose() {
+        clearInterval(gameInterval);
+        lostScreen.style.display = "block";
+    }
+
+    ramenClick.addEventListener("click", () => {
+        clicks++;
+    });
+
+    retryBtn.addEventListener("click", () => {
+        startClickGame();
+    });
+
 </script>
 
 </body>
